--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="navbar-email">platzi@example.com</li>
           <li class="navbar-shopping-cart">
             <img src="./icons/icon_shopping_cart.svg" alt="shopping cart" />
-            <div>2</div>
+            <div><span class="numCart"></span></div>
           </li>
         </ul>
       </div>
